[package]
name = "Installer"
version = "0.9.7"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["blocking"] }
directories = "6.0.0"
zip = "4.6.0"

#v0.1.0 Added basic functionality for Downloading and installing the file.
#v0.2.0 Adding abiltiy to add to path to System.


Todo : Adding ability to Uninstall