[package]
name = "Installer"
version = "0.4.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["blocking"] }
directories = "6.0.0"
zip = "4.6.0"
iced = "0.13.1"

#v0.1.0 Added basic functionality for Downloading and installing the file.
#v0.2.0 Added abiltiy to add to path to System.
#v0.2.2 Updated Checker for Cargo.
#v0.3.0 Added Debug Checker.
#v0.4.0 Added more relibale way to add to path using powershell commands.
#v0.4.1 Update to TOML
#Todo : Adding ability to Uninstall